--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1 = title
-  p Welcome to #{title}
+  h1= title
+  p Welcome to #{title}. A simple API that deals with typical information for financial transactions like account ownership data, shares, price, transaction time, etc.
